2003-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/Makefile.in (DISTFILES): Add otags.1 to the list.

2003-02-18  Dirk Eddelbuettel <edd@debian.org>

	* emacs/otags.1: New file.

2003-02-18  David Bateman <dbateman@free.fr>

	* configure.in: Eliminate linpack

2003-02-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for mkstemp too.

2003-02-13  Arno Klaassen  <arno@scito.com>

        * configure.in: Fix SH_LD and SH_LDFLAGS for -*-*-freebsd*.

2003-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Use '$(CXX)', '$(AR)', not "$CXX" and "$AR" when
	setting variables for building shared libraries.

2003-02-13  Paul Kienzle <pkienzle@users.sf.net>

	* examples/make_int.cc: Support for ISO standard compilers.

2003-01-22  Richard Stallman <rms@gnu.org>

	* emacs/octave-mod.el (octave-mode-map): Avoid binding keys that
	are reserved for users.

2003-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in: Fix typo in previous change.

2003-01-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (MKOCTFILE_INCFLAGS): Skip -I$(includedir) if
	$(includedir) is /usr/include.

2003-01-16  Mumit Khan  <khan@nanotech.wisc.edu>

	* Makeconf.in (SED): Export to subshells.

2003-01-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't bother with compiler flags for
	explicit/no-implicit template instantiation.

2003-01-11  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in, Makeconf.in: Allow setting of BUILD_LDFLAGS.

2003-01-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* autogen.sh: Use --force for autoconf and autoheader.

2003-01-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (CONF_DISTFILES): Include acx_blas.m4 and
	acx_lapack.m4.

	* configure.in (BUILD_CC, BUILD_CFLAGS, BUILD_CXX,
	BUILD_CXXFLAGS): Kluge for Sun C/C++.

2003-01-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Default value of BUILD_CXX is $CXX, not g++.